# ProstorTradeInBot

./: .gitignore  README.md  alembic.ini  damprodam-main.js  damprodam-vendor-hits.txt  pyproject.toml  samsung.html  tradein.html  trademac.html  tradepad.html
alembic/: env.py
alembic/versions/: 20260331_000001_init_schema.py
deploy/: README.md  env.production.example
deploy/scripts/: server_audit.sh
deploy/systemd/: prostor-tradein-bot.service
docs/discovery/: damprodam-flow.md  data-contract.md
src/: __init__.py
src/admin/: __init__.py  service.py
src/app/: container.py  main.py
src/bot/: factory.py  wizard_state.py
src/bot/routers/: common.py  wizard.py
src/catalog/: __init__.py  service.py
src/core/: __init__.py  logging.py  settings.py
src/domain/: contracts.py  enums.py  snapshot_schema.py
src/lead/: __init__.py  service.py
src/parser/: __init__.py  contracts.py
src/parser/damprodam/: __init__.py  api.py  importer.py
src/pricing/: __init__.py  service.py
src/storage/: db.py
src/storage/models/: __init__.py  snapshot.py
src/storage/repositories/: __init__.py  lead_repository.py  snapshot_repository.py
src/sync/: __init__.py  service.py
tests/: test_admin_service.py  test_catalog_service.py  test_damprodam_importer.py  test_domain_enums.py  test_lead_service.py  test_pricing_service.py  test_settings.py  test_sync_service.py  test_wizard_router.py
