[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "prostor-tradein-bot"
version = "0.1.0"
description = "Telegram trade-in bot for Moscow pricing parity with DamProdam"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.20.0,<4.0.0",
  "alembic>=1.15.0,<2.0.0",
  "apscheduler>=3.11.0,<4.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "structlog>=25.2.0,<26.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.26.0,<1.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[project.scripts]
prostor-bot = "src.app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
